@@ -1,0 +1,30 @@
+PREHOOK: query: create table kv_fileformat_check_txt (key string, value string) stored as textfile
+PREHOOK: type: CREATETABLE
+POSTHOOK: query: create table kv_fileformat_check_txt (key string, value string) stored as textfile
+POSTHOOK: type: CREATETABLE
+POSTHOOK: Output: default@kv_fileformat_check_txt
+PREHOOK: query: load data local inpath '../data/files/kv1.seq' overwrite into table kv_fileformat_check_txt
+PREHOOK: type: LOAD
+POSTHOOK: query: load data local inpath '../data/files/kv1.seq' overwrite into table kv_fileformat_check_txt
+POSTHOOK: type: LOAD
+POSTHOOK: Output: default@kv_fileformat_check_txt
+PREHOOK: query: create table kv_fileformat_check_seq (key string, value string) stored as sequencefile
+PREHOOK: type: CREATETABLE
+POSTHOOK: query: create table kv_fileformat_check_seq (key string, value string) stored as sequencefile
+POSTHOOK: type: CREATETABLE
+POSTHOOK: Output: default@kv_fileformat_check_seq
+PREHOOK: query: load data local inpath '../data/files/kv1.txt' overwrite into table kv_fileformat_check_seq
+PREHOOK: type: LOAD
+POSTHOOK: query: load data local inpath '../data/files/kv1.txt' overwrite into table kv_fileformat_check_seq
+POSTHOOK: type: LOAD
+POSTHOOK: Output: default@kv_fileformat_check_seq
+PREHOOK: query: drop table kv_fileformat_check_seq
+PREHOOK: type: DROPTABLE
+POSTHOOK: query: drop table kv_fileformat_check_seq
+POSTHOOK: type: DROPTABLE
+POSTHOOK: Output: default@kv_fileformat_check_seq
+PREHOOK: query: drop table kv_fileformat_check_txt
+PREHOOK: type: DROPTABLE
+POSTHOOK: query: drop table kv_fileformat_check_txt
+POSTHOOK: type: DROPTABLE
+POSTHOOK: Output: default@kv_fileformat_check_txt
